[package]
name = "harbor-core"
version = "0.1.0"
description = "Core library for the Harbor tool."
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/harbor-core"
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
keywords = ["har", "security", "headers", "scanner", "observatory"]
categories = ["security"]

[dependencies]
har = "0.9"

[dev-dependencies]
tempfile = "3"
